# VibeRacing

./: .agyignore  .gitignore  BUGFIX_NOTE.md  README.md  VibeRacing_Local.bat  audit-report.md  index.html  package-lock.json  package.json  presentation.md  presentation.pptx  tsconfig.json  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/core/: Engine.ts  P2PNetwork.ts  StintManager.ts
src/driver/: HypercarRender.ts  InputHandler.ts
src/engineer/: RhythmMatrix.ts  TelemetryCanvas.ts
src/shared/: GameState.ts  Progression.ts  TrackGenerator.ts
src/test/: driver_sim.ts  engine_sim.ts  progression_sim.ts  sim.ts  stint_sim.ts  test_track.ts  track_sim.ts  ui_sim.ts
