[package]
name = "viberacing"
version = "0.1.0"
description = "VibeRacing Co-op Racing Simulator"
authors = ["Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = true
